# graduate_synthesizer_project

./: .gitignore  README.md  match_audio.py  pyproject.toml  run_gui.py
.claude/: settings.local.json
config/: __init__.py  config.py
core/: __init__.py  audio_analysis.py  optimizer.py  preset_manager.py  profiler.py  realtime_synth.py  similarity_combined.py  similarity_frequency_bands.py  similarity_mfcc.py  similarity_mssl.py  similarity_panns.py  similarity_spectral.py  similarity_temporal.py  synthesizer.py
gui/: __init__.py  synthesizer_gui_dpg.py
presets/: sawtooth_wave.json  sine_wave.json  square_wave.json
validation/: run_sweep_panns.py  run_sweep_phase.py  sweep_config.py
